@@ -23,7 +23,6 @@ import static io.airbyte.db.jdbc.JdbcUtils.EQUALS;
 import static io.airbyte.integrations.source.relationaldb.RelationalDbQueryUtils.enquoteIdentifier;
 import static io.airbyte.integrations.source.relationaldb.RelationalDbQueryUtils.enquoteIdentifierList;
 import static io.airbyte.integrations.source.relationaldb.RelationalDbQueryUtils.getFullyQualifiedTableNameWithQuoting;
-import static io.airbyte.integrations.source.relationaldb.RelationalDbQueryUtils.getIdentifierWithQuoting;
 import static io.airbyte.integrations.source.relationaldb.RelationalDbQueryUtils.queryTable;
 
 import com.fasterxml.jackson.databind.JsonNode;
@@ -147,18 +146,9 @@ public abstract class AbstractJdbcSource<Datatype> extends AbstractDbSource<Data
                                                                   final String schemaName,
                                                                   final String tableName) {
     LOGGER.info("Queueing query for table: {}", tableName);
-    final var modified = columnNames.stream()
-        .map(col -> {
-          final var quoted = getIdentifierWithQuoting(col, getQuoteString());
-          return col.contains("_at")
-              ? "to_char(%s, 'YYYYMMDDHHMISSMSOF') as %s".formatted(quoted, quoted)
-              : quoted;
-        }).collect(Collectors.joining(","));
-    final var query = String.format("SELECT %s FROM %s",
-        /*enquoteIdentifierList(columnNames, getQuoteString())*/modified,
-        getFullyQualifiedTableNameWithQuoting(schemaName, tableName, getQuoteString()));
-    LOGGER.info("*** query: {}", query);
-    return queryTable(database, query);
+    return queryTable(database, String.format("SELECT %s FROM %s",
+        enquoteIdentifierList(columnNames, getQuoteString()),
+        getFullyQualifiedTableNameWithQuoting(schemaName, tableName, getQuoteString())));
   }
 
   /**
